change package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "s-cart/core",
+  "name": "phuctu1901/s-cart-core",
   "description": "Free Laravel e-commerce for business",
   "keywords": ["laravel ecommerce", "s-cart", "scart ecommerce"],
   "homepage": "https://s-cart.org",
