change package description

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "phuctu1901/s-cart-core",
-  "description": "Free Laravel e-commerce for business",
+  "description": "s-cart-core were edited by me, based s-cart/core",
   "keywords": ["laravel ecommerce", "s-cart", "scart ecommerce"],
   "homepage": "https://s-cart.org",
   "license": "MIT",
