Added banner title and desc, thumb config for homepage

--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
   "license": "MIT",
   "authors": [
       {
-          "name": "Lanh Le",
-          "email": "lanhktc@gmail.com"
+          "name": "Phuc Tu",
+          "email": "phuctu1901@gmail.com"
       }
   ],
   "require": {
